--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
   <title>calculator</title>
 </head>
-
+<!-- Version 1.0 18.11.2020 Create by Ulad Sasnouski -->
 <body>
-  <div class="containerFlex">
   <main class="main">
       <div class="calc">
         <div class="calc-display">
@@ -98,35 +97,36 @@
           </table>
         </div>
       </div>
+      <div class="howToWork">
+        <h1 class="title">Калькулятор</h1>
+        <div class="about">
+          <div class="about_btn">
+            Как это работает?
+          </div>
+          <div>
+            <ul id="operationsList">
+              <li>Корень n степени:</li>
+              <div class="workText">
+                Вводится число под корнем - клавиша "Корень" - вводится степень корня - результат.
+              </div>
+            <li>Возведение в степень:</li>
+              <div class="workText">
+                Вводится число - клавиша степени - вводится степень - результат.
+              </div>
+            <li>Отрицательные числа:</li>
+              <div class="workText">
+                Активируем клавишу отрицательного числа "+/-" - вводим число - продолжаем выполнять необходимые операции.
+              </div>
+            <li>Проценты:</li>
+              <div class="workText">
+                Вводится число от которого мы хотим посчитать проценты - клавиша "процент" - вводим проценты.
+              </div>
+            </ul>
+          </div>
+        </div>
+      </div>
   </main>
-  <div class="howToWork">
-    <h1 class="title">Калькулятор</h1>
-    <div class="about">
-      <div class="about_btn">
-        Как это работает?
-      </div>
-      <div>
-        <ul id="operationsList">
-          <li>Корень n степени:</li>
-          <div class="workText">
-            Вводится число под корнем - клавиша "Корень" - вводится степень корня - результат.
-          </div>
-        <li>Возведение в степень:</li>
-          <div class="workText">
-            Вводится число - клавиша степени - вводится степень - результат.
-          </div>
-        <li>Отрицательные числа:</li>
-          <div class="workText">
-            Активируем клавишу отрицательного числа "+/-" - вводим число - продолжаем выполнять необходимые операции.
-          </div>
-        <li>Проценты:</li>
-          <div class="workText">
-            Вводится число от которого мы хотим посчитать проценты - клавиша "процент" - вводим проценты.
-          </div>
-        </ul>
-      </div>
-    </div>
-  </div>
+  
 
   <script src="script-new.js">
   </script>
