--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400&display=swap" rel="stylesheet">
-    <title>Dynamic Landing Page</title>
+    <title>CSS Variables and JS</title>
 </head>
 <body>
     <h2>CSS Variables and <span class='hl'>JS</span></h2>
@@ -25,7 +25,7 @@
             </div>
             <div class="container">
                 <label for="width">Size:</label>
-                <input id="width" type="range" name="width" min="20" max="100" value="30" data-sizing="%">
+                <input id="width" type="range" name="width" min="20" max="100" value="40" data-sizing="%">
             </div>
             <div class="container">
                 <label for="transform">Rotate:</label>
@@ -41,7 +41,7 @@
             </div>
             <div class="container">
                 <label for="opacity">Opacity:</label>
-                <input id="opacity" type="range" name="opacity" min="0" max="100" value="0" data-sizing="%">
+                <input id="opacity" type="range" name="opacity" min="0" max="100" value="100" data-sizing="%">
             </div>
             <div class="container">
                 <label for="brightness">Brightness:</label>
@@ -62,6 +62,9 @@
             <div class="container">
                 <label for="invert">Invert:</label>
                 <input id="invert" type="range" name="invert" min="0" max="100" value="0" data-sizing="%">
+            </div>
+            <div class="container">
+                <a id="reset">Reset</a>
             </div>
         </div>
     
