feat: update Resume

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=header., initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Front End Developer Resume</title>
     <link href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;700&family=Roboto:wght@400;500&display=swap"
@@ -23,7 +23,7 @@
             <div class="container">
                 <div class="headerContentInner">
                     <div class="headerLogo">
-                        <a href="#">Junior Developer Resume</a>
+                        <a href="#">Junior Web Developer Resume</a>
                     </div>
                     <nav class="menu">
                         <ul>
@@ -48,10 +48,15 @@
                         Ulad Sasnouski
                     </div>
                     <div class="AboutMeTitle">
-                        About me
+                        Professional profile
                     </div>
                     <div class="AboutMeText">
-                        I am a very purposeful person and always go to the end. When I have a goal , I will achieve it by any means. I have a dream: starting a family. I understand perfectly well that working even at a military space enterprise-there are not enough funds to realize my dream. I started learning JavaScript from scratch. I sit for 4 hours a day and each time I discover something new in programming. All because I have a goal-to change my field of activity and become a frontend developer! And I will do it!
+                        - UI / Web Developer with 1 year of experience. <br>
+                        - Web Application Debugging skills with Chrome Dev Tools. <br>
+                        - Strong understanding of HTML, CSS, JavaScript. <br>
+                        - Deep knowledge of web applications development and its main stages. <br>
+                        - Confident time planning skills. <br>
+                        - Capable to work alone and in team of small and large developer teams.
                     </div>
                     <ul class="AboutMeList">
                         <li class="AboutPhone"><a href="tel:+375447533097">+375(44)753-30-97</a></li>
@@ -74,20 +79,16 @@
                 </div>
                 <div class="ProjectsText">
                     <ol>
-                        <li><a href="">Calculator</a></li>
-                        <li><a href="">Dynamic Landing Page</a></li>
-                        <li><a href="">Meditation App</a></li>
-                        <li><a href="">Drum Kit</a></li>
-                        <li><a href="">CSS Variables and JS</a></li>
-                        <li><a href="">Flex Panel Gallery</a></li>
-                        <li><a href="">Fun with HTML5 Canvas</a></li>
-                        <li><a href="">Custom Video Player</a></li>
-                        <li><a href="">Video Speed Controller</a></li>
-                        <li><a href="">Whack-A-Mole</a></li>
-                        <li><a href="">Virtual Keyboard</a></li>
-                        <li><a href="">Chat on socket.io</a></li>
-                        <li><a href="">Raindrops</a></li>
-                        <li><a href="">Fancy-weather</a></li>
+                        <li><a href="https://uladsasnouski.github.io/Calculator/">Calculator</a></li>
+                        <li><a href="https://uladsasnouski.github.io/Dynamic-Landing-Page/index.html">Dynamic Landing Page</a></li>
+                        <li><a href="https://uladsasnouski.github.io/Meditation/index-new.html">Meditation App</a></li>
+                        <li><a href="https://uladsasnouski.github.io/Drum-Kit">Drum Kit</a></li>
+                        <li><a href="https://uladsasnouski.github.io/Variables">CSS Variables and JS</a></li>
+                        <li><a href="https://uladsasnouski.github.io/Flex-panels/">Flex Panel Gallery</a></li>
+                        <li><a href="https://uladsasnouski.github.io/Canvas/">Fun with HTML5 Canvas</a></li>
+                        <li><a href="https://uladsasnouski.github.io/Video-Player">Custom Video Player</a></li>
+                        <li><a href="#">Video Speed Controller</a></li>
+                        <li><a href="https://uladsasnouski.github.io/singolo/">Singolo</a></li>
                     </ol>
                 </div>
             </div>
@@ -102,10 +103,8 @@
                                 <li>Secondary School No. 137.</li>
                                 <li>College of Modern Technology in mechanical engineering and car service Educational Institution Republican Institute of Vocational Education.</li>
                                 <li>Belarusian National Technical University.</li>
-                                <li>Driving School.</li>
-                                <li>Acting courses at Insight Theater.</li>
                                 <li>English courses Underground.</li>
-                                <li>UpSkillLub EPAM.</li>
+                                <li>Rs School - UpSkillLub EPAM.</li>
                                 <li>Geekbrains courses.</li>
                             </ol>
                         </div>
@@ -114,23 +113,56 @@
             <section class="Skills">
                     <div class="SkillsInner">
                         <div class="SkillsTitle">
-                            Skills
+                            Skills Summary
                         </div>
                         <div class="SkillsText">
                             <ol>
-                                <li>HTML ( cross-browser and responsive layout )</li>
-                                <li>CSS ( Grid, Flex, Media, SASS )</li>
-                                <li>JavaScript ( ES6, ES7, ES8 )</li>
-                                <li>Node JS</li>
-                                <li>SQL</li>
-                                <li>React</li>
-                                <li>Git</li>
-                                <li>Figma</li>
+                                <li>HTML5, CSS3, jQuery, HTTP, AJAX, JSON, Webpack</li>
+                                <li>JavaScript, C#, Pawno</li>
+                                <li>Apache</li>
+                                <li>MySQL</li>
+                                <li>Visual Studio Code, Notepad++, Git, GitHub, Photoshop, CorelDraw, Sony Vegas, CreoParametrick, Figma</li>
+                                <li>English A2</li>
                             </ol>
                         </div>
                     </div>
             </section>
     </div>
+    <section class="AboutMe">
+        <div class="container">
+                <div class="AboutMeTitleBox">
+                    <div class="ExperMeTitle">
+                        Experience
+                    </div>
+                    <p>Junior Web Developer - Rolling Scopes UpSkill Lab</p>
+                    <p>Development of several web applications for different goals and needs including video and audio players, meditation and goals focus, live chat. Some applications were dedicated to drawing using canvas, interactive whack-a-mole game, virtual keyboard and weather widget.</p>
+                    <div class="Exper">
+                        <div class="TitleExper">
+                            Responsibilities
+                        </div>
+                        <div class="TextExper">
+                            Developing adaptiveHTML5 pages as a base for applications using CSS3 styling with media queries to meet several screen resolutions including mobile, tablet and desktops. Developing application features with JavaScript including fetching data from RESTful backend server with promises and async/await, using browser Events and Notifications API. Bundling and building project code using Webpack
+                        </div>
+                    </div>
+                    <div class="Exper">
+                        <div class="TitleExper">
+                            Environment
+                        </div>
+                        <div class="TextExper">
+                            HTML5, CSS3, JavaScript ES6+, WebPack, Visual Studio Code, Git, GitHub, Windows
+                        </div>
+                    </div>
+                    <div class="Exper">
+                        <div class="TitleExper">
+                            Project results
+                        </div>
+                        <div class="TextExper">
+                            Deployed to production
+                        </div>
+                    </div>
+                </div>
+        </div>
+    </section>
     
     <footer class="footer">
         <div class="footerCopy">
